--- a/Mesa4.ini
+++ b/Mesa4.ini
@@ -1,7 +1,4 @@
-# Erstellt von PNCconf am Tue Mar 10 00:22:38 2020
-# Using LinuxCNC version:  UNAVAILABLE
-# Änderungen an dieser Datei werden beim nächsten
-# overwritten when you run PNCconf again
+# Erstellt am Tue Mar 10 00:22:38 2020
 
 [EMC]
 MACHINE = Mesa4
